# rotor

./: .env.example  .gcloudignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  plugin.env
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: build.ci.yml  build.reusable.yml  build.test.yml  cd.release.yml  ci.build.yml  cmake.yml  package.reusable.yml  package.test.yml  release.cd.yml  release.yml  reusable.build.yml  reusable.package.yml  test.build.yml  test.package.yml
cmake/: load_env.cmake
design/: rotor-gui.afdesign
packaging/: Rotor v1.0.0 (macOS).dmg  Rotor.iss  Rotor.pkgproj  dmg.json  pkg_introduction.txt
packaging/dmg/: Rotor.pkg
scripts/: build.sh  format.sh  precompile.sh  tag.sh
src/: RotorAnalyzer.cpp  RotorAnalyzer.h  RotorData.h  RotorEditor.cpp  RotorEditor.h  RotorLookAndFeel.cpp  RotorLookAndFeel.h  RotorProcessor.cpp  RotorProcessor.h
